Fix hoc map legend to work on mobile

--- a/pegasus/sites.v3/hourofcode.com/public/css/map.css
+++ b/pegasus/sites.v3/hourofcode.com/public/css/map.css
@@ -47,7 +47,7 @@
   margin-bottom: 5px;
 }
 
-.mapbox-legend {
+.inmap-mapbox-legend {
   background-color: #fff;
   padding: 10px;
   margin: 5px;
